tests/rosetta/out/Smalltalk/animate-a-pendulum.out
/tmp/animate-a-pendulum.st:8: parse error, expected ']'
